[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/croben_button.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FredokaOne16.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/home_controller.gd" type="Script" id=3]
[ext_resource path="res://Art/UI-Art/playicon.png" type="Texture" id=4]
[ext_resource path="res://Art/UI-Art/button.png" type="Texture" id=5]
[ext_resource path="res://Art/Evironment-Art/bg-gradient.png" type="Texture" id=6]
[ext_resource path="res://Art/Evironment-Art/mist.png" type="Texture" id=7]
[ext_resource path="res://Scripts/background_scroller.gd" type="Script" id=8]
[ext_resource path="res://Art/Others-Art/title.png" type="Texture" id=9]
[ext_resource path="res://Art/UI-Art/settings.png" type="Texture" id=10]
[ext_resource path="res://Fonts/TitanOne24.tres" type="DynamicFont" id=11]
[ext_resource path="res://Art/UI-Art/crown.png" type="Texture" id=12]
[ext_resource path="res://Fonts/TitanOne40.tres" type="DynamicFont" id=13]
[ext_resource path="res://Art/UI-Art/closeicon.png" type="Texture" id=14]

[node name="HomeScene" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="BG1" type="Node" parent="."]

[node name="mist" type="Sprite" parent="BG1"]
scale = Vector2( 4, 3.70898 )
texture = ExtResource( 7 )
script = ExtResource( 8 )

[node name="mist2" type="Sprite" parent="BG1"]
position = Vector2( 0, 947.2 )
scale = Vector2( 4, 3.70898 )
texture = ExtResource( 7 )
script = ExtResource( 8 )

[node name="BG2" type="Node" parent="."]

[node name="mist" type="Sprite" parent="BG2"]
scale = Vector2( -4, -3.709 )
texture = ExtResource( 7 )
script = ExtResource( 8 )
speed = 18.0

[node name="mist2" type="Sprite" parent="BG2"]
position = Vector2( 0, 947.2 )
scale = Vector2( -4, -3.709 )
texture = ExtResource( 7 )
script = ExtResource( 8 )
speed = 18.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="bg-gradient" type="Sprite" parent="ParallaxBackground"]
self_modulate = Color( 0.423529, 0.619608, 0.956863, 1 )
scale = Vector2( 3.75, 6.66406 )
texture = ExtResource( 6 )
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Body" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 210
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Body"]
margin_top = 210.0
margin_right = 480.0
margin_bottom = 853.0
custom_constants/separation = 100

[node name="Title" type="TextureRect" parent="CanvasLayer/Body/VBoxContainer"]
margin_right = 480.0
margin_bottom = 108.0
texture = ExtResource( 9 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="CanvasLayer/Body/VBoxContainer"]
self_modulate = Color( 0.282353, 0.92549, 0.592157, 1 )
margin_left = 190.0
margin_top = 208.0
margin_right = 290.0
margin_bottom = 258.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
max_scale = 1.1
pressed_color = Color( 0.831373, 0.639216, 0.313726, 1 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Body/VBoxContainer/PlayButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 18
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Body/VBoxContainer/PlayButton/MarginContainer"]
margin_left = 18.0
margin_top = 10.0
margin_right = 90.0
margin_bottom = 42.0
mouse_filter = 2
custom_constants/separation = -1

[node name="Icon" type="TextureRect" parent="CanvasLayer/Body/VBoxContainer/PlayButton/MarginContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Body/VBoxContainer/PlayButton/MarginContainer/HBoxContainer"]
margin_left = 31.0
margin_top = 6.0
margin_right = 72.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
text = "Play"
valign = 1
clip_text = true

[node name="Footer" type="MarginContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -64.0
margin_right = 240.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 13
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Footer"]
margin_left = 15.0
margin_top = 13.0
margin_right = 465.0
margin_bottom = 49.0

[node name="TopScoreImg" type="TextureRect" parent="CanvasLayer/Footer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 36.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 12 )
stretch_mode = 6

[node name="TopScoreLabel" type="Label" parent="CanvasLayer/Footer/HBoxContainer"]
margin_left = 36.0
margin_right = 414.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 11 )
text = "000000"
valign = 2
clip_text = true

[node name="SettingsButton" type="TextureButton" parent="CanvasLayer/Footer/HBoxContainer"]
margin_left = 418.0
margin_right = 450.0
margin_bottom = 36.0
texture_normal = ExtResource( 10 )
stretch_mode = 5
script = ExtResource( 1 )
pressed_color = Color( 0.831373, 0.639216, 0.313726, 1 )

[node name="Settings" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 64
custom_constants/margin_top = 150
custom_constants/margin_left = 64
custom_constants/margin_bottom = 320
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/Settings"]
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 64.0
margin_top = 150.0
margin_right = 416.0
margin_bottom = 533.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/Panel/MarginContainer"]
margin_right = 352.0
margin_bottom = 363.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_right = 352.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="SettingsLbl" type="Label" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -23.0
margin_right = 176.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 13 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer"]
margin_left = 56.0
margin_top = 115.0
margin_right = 296.0
margin_bottom = 165.0
size_flags_horizontal = 4
custom_constants/separation = 40

[node name="KeyboardBtn" type="TextureButton" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color( 0.32549, 0.560784, 0.956863, 1 )
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer/HBoxContainer/KeyboardBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer/HBoxContainer/KeyboardBtn/MarginContainer"]
margin_left = 10.0
margin_top = 15.0
margin_right = 90.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
text = "Keyboard"
align = 1
valign = 1
clip_text = true

[node name="TouchBtn" type="TextureButton" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color( 0.32549, 0.560784, 0.956863, 1 )
margin_left = 140.0
margin_right = 240.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer/HBoxContainer/TouchBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer/HBoxContainer/TouchBtn/MarginContainer"]
margin_left = 10.0
margin_top = 15.0
margin_right = 90.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
text = "Touch"
align = 1
valign = 1
clip_text = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 352.0
margin_bottom = 298.0
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 0
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsLbl" type="Label" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 26.0
margin_right = 332.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 2 )
text = "Move: A / D
Jump: W / Space
Dash: 2x A / D"
align = 1

[node name="CloseBtn" type="TextureButton" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer"]
self_modulate = Color( 0.952941, 0.341176, 0.180392, 1 )
margin_left = 126.0
margin_top = 313.0
margin_right = 226.0
margin_bottom = 363.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
max_scale = 1.1
pressed_color = Color( 0.831373, 0.639216, 0.313726, 1 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer/CloseBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer/CloseBtn/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 90.0
margin_bottom = 42.0
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer/CloseBtn/MarginContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer/CloseBtn/MarginContainer/HBoxContainer"]
margin_left = 36.0
margin_top = 6.0
margin_right = 80.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
text = "Close"
align = 1
valign = 1
clip_text = true
[connection signal="pressed" from="CanvasLayer/Body/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Footer/HBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer/HBoxContainer/KeyboardBtn" to="." method="_on_KeyboardBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer/HBoxContainer/TouchBtn" to="." method="_on_TouchBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/Panel/MarginContainer/VBoxContainer/CloseBtn" to="." method="_on_CloseBtn_pressed"]
